<resources>
    <string name="app_name">Dietomator</string>

    <!-- DetailActivity -->
    <string name="mealDetailName">Nazwa posiłku</string>
    <string name="mealDetailContext">Opis posiłku</string>
    <string name="mealDetailStaticText">Wartość odżywcza na 1 porcje:</string>
    <string name="mealDetailPlaceholder">0</string>
    <string name="mealDetailKcal">Kcal:</string>
    <string name="mealDetailFat">Tłuszcz:</string>
    <string name="mealDetailCarbohydrates">Węglowodany:</string>
    <string name="mealDetailProtein">Białko:</string>

    <!-- Main Activity -->
    <string name="mainActivityButtonText">Stwórz diete!</string>
    <string name="mainActivityCreateMealButton">Dodaj posiłek</string>
    <string name="mainActivityDiets">Diety</string>
    <string name="mainActivityPlainText">Przykładowe posiłki:</string>
    <string name="helloText">Witaj!</string>

    <!-- Detail Activity-->
    <string name="detailActivityIngredients">Składniki:</string>
    <string name="detailActivityPreparation">Sposób przygotowania:</string>

    <!-- Add New Meal Activity -->
    <string name="addNewMealActivityAddButton">Dodaj!</string>

    <!-- Add New Diet Activity -->
    <string name="addNewDietActivityNewDietPlaceholder">Nazwa diety</string>
    <string name="addNewDietActivityMealsText">Posiłki do wyboru:</string>
    <string name="addNewDietActivityAddDietButton">Stwórz dietę!</string>
    <string name="addNewDietActivityBeginDateText">Data rozpoczęcia</string>
    <string name="addNewDietActivityEndDateText">Data zakończenia</string>
    <!-- Diet Activity -->
    <string name="DietActivityText">Diety</string>

    <!-- Login Activity -->
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="loginButton">Zaloguj</string>
    <string name="checkBoxText">Zapamiętaj mnie</string>
    <string name="info">*Jeśli nie posiadasz konta pierwsze logowanie Jest rejestracją :)</string>

</resources>
